update Home Page: list CiteIt.net links   * create embedded style sheet and listing

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <html>
+  <head>
+    <title>CiteIt.net: Demo Sites</title>
+	<style>
+	  body {
+		  margin: 50 90 50 90;
+	  }
+	  div#sites {
+		 margin-left: 30px;
+	  }
+	  h2#code {
+		  margin-top: 50px;
+	  }
+	</style>
 
-<h1><a href="https://www.citeit.net/">CiteIt.net</a></h1>
+ </head>
 
-<p>This site is a collection of <b>website demos</b> that represent what these sites could 
-look like with the addition of the <a href="https://www.citeit.net/sample-code/examples.html">CiteIt.net javascript.</p>
+<body>
 
-<a href="https://github.com/timlangeman/citeit-sample-webpages">Available on GitHub</a>
+   <h1><a href="https://www.citeit.net/">CiteIt.net</a></h1>
 
+   <p>This site is a collection of <b>website demos</b> that represent what these sites could 
+   look like with the addition of the <a href="https://www.citeit.net/sample-code/examples.html">CiteIt.net javascript</a>.</p>
+
+   <div id='sites'>
+   <h2>Demo Sites</h2>
+	<ul>
+		<li>Wikipedia
+
+		<ul><li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Inauguration_of_John_F._Kennedy">Inauguration of John F. Kennedy</a></li></ul>
+
+		</li>
+	</ul>
+
+   <h2 id='code'>More Information:</h2>
+	<ul>
+	   <li><a href="https://www.citeit.net/">CiteIt.net home</a> with 3-minute video</a></li>
+	   <li><a href="https://demo.citeit.net/">Test-drive CiteIt.net App</a></li>
+	   <li><a href="https://www.citeit.net/sample-code/examples.html">Code Examples</a></li>
+	</ul>
+
+   <h2 id='code'>Code:</h2>
+	<ul>
+	   <li><a href="https://github.com/timlangeman/citeit-sample-webpages">GitHub Repository for this Site</a></li>
+	   <li><a href="https://www.citeit.net/code/">All Code</a></li>
+	</ul>
+   
+   </div>
+
+</body>
 </html>
