--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <title>CiteIt.net: Demo Sites</title>
 	<style>
 	  body {
-		  margin: 50 90 50 90;
+	     margin: 50 90 50 90;
 	  }
 	  div#sites {
-		 margin-left: 30px;
+	     margin-left: 30px;
 	  }
 	  h2#code {
-		  margin-top: 50px;
+	     margin-top: 50px;
+	  }
+	  ul li {
+	     margin-bottom:20px;
 	  }
 	</style>
 
@@ -26,11 +29,19 @@
    <h2>Demo Sites</h2>
 	<ul>
 		<li>Wikipedia
+			<ul><li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Inauguration_of_John_F._Kennedy">Inauguration of John F. Kennedy</a> (<a href="https://meta.wikimedia.org/wiki/User:Timlangeman/sandbox">proposal for Wikipedia</a>)</li></ul>
+		</li>
 
-		<ul><li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Inauguration_of_John_F._Kennedy">Inauguration of John F. Kennedy</a></li></ul>
-
+		<li>Interfluidity
+		  <ul><li><a href="http://demo-sites.citeit.net/www.interfluidity.com/v2/7097.html">Three levels of controversy over MMT</a></li></ul>
 		</li>
 	</ul>
+
+    <br /><br />
+    <h3>Download Command:</h3>
+	<ul>
+		<li><a href="https://stackoverflow.com/questions/6348289/download-a-working-local-copy-of-a-webpage">wget</a> -p -k https://en.wikipedia.org/wiki/Inauguration_of_John_F._Kennedy</li>
+        </ul>
 
    <h2 id='code'>More Information:</h2>
 	<ul>
@@ -39,12 +50,17 @@
 	   <li><a href="https://www.citeit.net/sample-code/examples.html">Code Examples</a></li>
 	</ul>
 
+
    <h2 id='code'>Code:</h2>
 	<ul>
 	   <li><a href="https://github.com/timlangeman/citeit-sample-webpages">GitHub Repository for this Site</a></li>
 	   <li><a href="https://www.citeit.net/code/">All Code</a></li>
 	</ul>
    
+  
+	<br /><br />
+
+	<a href="https://www.citeit.net/">CiteIt.net home</a> | <a href="https://demo.citeit.net/">Demo site</a> | <a href="https://www.citeit.net/wordpress-plugin/">WordPress Plugin</a> | <a href="https://www.citeit.net/sample-code/text-version.php">Text-version of page</a> | <a href="https://www.citeit.net/sample-code/examples.html">Code Examples</a> | <a href="https://www.citeit.net/code/">Code</a>
    </div>
 
 </body>
