--- a/index.html
+++ b/index.html
@@ -361,7 +361,6 @@ a.try-demo {
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Manned_Orbiting_Laboratory">Manned Orbiting Laboratory</a>**</li>			
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Shadows_Over_Shanghai">Shadows Over Shanghai</a>**</li>			
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Marie_Wittman">Marie Wittman</a>**</li>			
-				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Tsunami">Tsunami</a>**</li>			
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li>			
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Irish_War_of_Independence">Irish War of Independence</a>**</li>			
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Petrozavodsk_phenomenon">Petrozavodsk_phenomenon</a>**</li>			
@@ -372,6 +371,7 @@ a.try-demo {
 				<li><a href="http://demo-sites.citeit.net/it.wikipedia.org/wiki/Dietrich_Buxtehude">Dietrich Buxtehude</a> ** (Italian uses « » for quotation marks)</li>
 				<li><a href="http://demo-sites.citeit.net/it.wikipedia.org/wiki/Leonardo_da_Vinci">Leonardo da Vinci</a> ** (Italian uses « » for quotation marks)</li>
 
+				<li><a href="http://demo-sites.citeit.net/de.wikipedia.org/wiki/Sigmund_Freud">Sigmund_Freud</a> ** (German uses „ “ for quotation marks )</li>
 				<li><a href="http://demo-sites.citeit.net/de.wikipedia.org/wiki/J%C3%BCrgen_Habermas">Jürgen Habermas</a> ** (German uses „ “ for quotation marks )</li>
 				<li><a href="http://demo-sites.citeit.net/de.wikipedia.org/wiki/Martin_Luther">Martin Luther</a> ** (German uses „ “ for quotation marks )</li>
 
@@ -381,8 +381,8 @@ a.try-demo {
 				<li><a href="http://demo-sites.citeit.net/es.wikipedia.org/wiki/Historia_de_Guatemala">Historia de Guatemala</a> ** (Spanish uses « » for quotation marks) </li>
 				<li><a href="http://demo-sites.citeit.net/es.wikipedia.org/wiki/Don_Quijote_de_la_Mancha">Don Quixote</a>. ** (Spanish uses « » for quotation marks) </li>
 
-				<li><a href="http://demo-sites.citeit.net/ru.wikipedia.org/wiki/%D0%94%D0%BE%D1%81%D1%82%D0%BE%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%D0%B9,_%D0%A4%D1%91%D0%B4%D0%BE%D1%80_%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2%D0%B8%D1%87">Достоевский, Фёдор Михайлович</a> ** (Russian: Dostoyevsky)</li>
-				<li><a href="http://demo-sites.citeit.net/ru.wikipedia.org/wiki/%D0%A2%D0%BE%D0%BB%D1%81%D1%82%D0%BE%D0%B9,_%D0%9B%D0%B5%D0%B2_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B5%D0%B2%D0%B8%D1%87">Толстой, Лев Николаевич</a> ** (Russian: Tolstoy)</li>
+				<li><a href="http://demo-sites.citeit.net/ru.wikipedia.org/wiki/%D0%94%D0%BE%D1%81%D1%82%D0%BE%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%D0%B9,_%D0%A4%D1%91%D0%B4%D0%BE%D1%80_%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2%D0%B8%D1%87">Достоевский, Фёдор Михайлович</a> ** (Russian uses « » for quotation marks: Dostoyevsky)</li>
+				<li><a href="http://demo-sites.citeit.net/ru.wikipedia.org/wiki/%D0%A2%D0%BE%D0%BB%D1%81%D1%82%D0%BE%D0%B9,_%D0%9B%D0%B5%D0%B2_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B5%D0%B2%D0%B8%D1%87">Толстой, Лев Николаевич</a> ** (Russian uses « » for quotation marks: Tolstoy)</li>
 	
 			</ol>
 		</li>
