update Wikipedia Listings
  * break completed listing into categories
  * add articles suggested by Phil

--- a/index.html
+++ b/index.html
@@ -495,8 +495,9 @@ $(document).ready(function(){
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li-->								
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/W._E._B._Du_Bois">W. E. B. Du Bois</a> </li-->
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Marjory_Stoneman_Douglas">Marjory Stoneman Douglas</a> </li-->
-
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Phan_%C4%90%C3%ACnh_Ph%C3%B9ng">Phan_%C4%90%C3%ACnh_Ph%C3%B9ng</a></li-->
+
+
 
 			</ol>
 
@@ -561,10 +562,47 @@ $(document).ready(function(){
 			<button class="toggle">Show/Hide "in-progress"</button><br /><br />
 
 			<ol class="in_progress">
+				<li><a href="https://en.wikipedia.org/wiki/Joe_Biden">Joe Biden</li>
+				<li><a href="https://en.wikipedia.org/wiki/Bernie_Sanders">Bernie_Sanders</li>
+				<li><a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</li>
+				<li><a href="https://en.wikipedia.org/wiki/Sam_Harris">Sam_Harris</li>
+				<li><a href="https://en.wikipedia.org/wiki/Constitution_of_the_United_States">Constitution_of_the_United_States</li>
+				<li><a href="https://en.wikipedia.org/wiki/Brexit">Brexit</li>
+				<li><a href="https://en.wikipedia.org/wiki/QAnon">QAnon</li>
+				<li><a href="https://en.wikipedia.org/wiki/Reptilian_conspiracy_theory">Reptilian_conspiracy_theory</li>
+				<li><a href="https://en.wikipedia.org/wiki/Nazca_Lines">Nazca_Lines</li>
+				<li><a href="https://en.wikipedia.org/wiki/Loch_Ness_Monster">Loch_Ness_Monster</li>
+				<li><a href="https://en.wikipedia.org/wiki/Scientology">Scientology</li>
+				<li><a href="https://en.wikipedia.org/wiki/FIFA">FIFA</li>
+				<li><a href="https://en.wikipedia.org/wiki/Christianity">Christianity</li>
+				<li><a href="https://en.wikipedia.org/wiki/Cryptocurrency">Cryptocurrency</li>
+				<li><a href="https://en.wikipedia.org/wiki/Sikhism">Sikhism</li>
+				<li><a href="https://en.wikipedia.org/wiki/Reaganomics">Reaganomics</li>
+				<li><a href="https://en.wikipedia.org/wiki/Capital_Punishment">Capital_Punishment</li>
+				<li><a href="https://en.wikipedia.org/wiki/Dog">Dog</li>
+
+				<li></li>
+				<li><a href="https://en.wikipedia.org/wiki/The_Negro_Motorist_Green_Book">The_Negro_Motorist_Green_Book</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/George_W._Bush">George W. Bush</a>**</li>
+				<li><a href="https://en.wikipedia.org/wiki/Phan_%C4%90%C3%ACnh_Ph%C3%B9ng">Phan_%C4%90%C3%ACnh_Ph%C3%B9ng</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Norte_Chico_civilization">Norte Chico civilization</a></li>
+
+
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Peasants%27_Revolt">Peasants Revolt</li>
+				<li><a href="http://demo-sites.citeit.net/.wikipedia.org/wiki/Stonewall_riots">Stonewall riots</li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/1980_eruption_of_Mount_St._Helens">1980 eruption of Mount St. Helens</li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Anti-tobacco_movement_in_Nazi_Germany">Anti-tobacco_movement_in_Nazi_Germany</li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Velociraptor">Velociraptor</li>
+
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Nguy%E1%BB%85n_Ch%C3%A1nh_Thi">Nguyễn Chánh Thi</li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Pain_fitzJohn">Pain fitzJohn</li>
+				<li><a href="http://demo-sites.citeit.net/it.wikipedia.org/wiki/Leonardo_da_Vinci">Leonardo da Vinci</a> ** (Italian uses « » for quotation marks)</li>
+
+
+
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Hollywood_Women%27s_Political_Committee">Hollywood_Women's Political Committee</a> Will **</li>
 
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Irish_War_of_Independence">Irish War of Independence</a> <span class="alanna">(Alanna: 1st)</span></li>			
-				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Petrozavodsk_phenomenon">Petrozavodsk_phenomenon</a> (Will)**</li>
 
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/National_Gallery">National Gallery</a> (Will)**</li>	
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li-->								
@@ -644,6 +682,7 @@ $(document).ready(function(){
 
 			Articles without electronic sources:
 			<ol>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Petrozavodsk_phenomenon">Petrozavodsk_phenomenon</a> (Russian Sources)**</li>
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/First_Battle_of_Newbury">First Battle of Newbury</a>**</li>
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Shadows_Over_Shanghai">Shadows Over Shanghai</a> ** Sources not available</li>			
 				<li> 	https://en.wikipedia.org/wiki/Noble_gas (short quotes) </li>
