update annotations: Trump.  update Wikipedia Listings
  * update Wikipedia Listings
  * update Trump annotations

--- a/index.html
+++ b/index.html
@@ -479,28 +479,6 @@ $(document).ready(function(){
 		<li><b>Annotated</b> <a href="https://www.wikipedia.org/">Wikipedia</a> articles:  (<a href="https://meta.wikimedia.org/wiki/User:Timlangeman/sandbox">proposal for Wikipedia</a>)<br /><br />
 
 
-			<h3>People/Groups</h3>
-			<ol>
-
-
-				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Ruth_Bader_Ginsburg">Ruth Bader Ginsburg</a> </li>
-				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Donald_Trump">Donald Trump</a></li>
-
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Hillary_Clinton">Hillary Clinton</a> (Tim)</li-->
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Barack_Obama">Barak Obama</a>**</li-->
-				<!--li><a href="http://demo-sites.citeit.net/https://en.wikipedia.org/wiki/George_W._Bush">George W. Bush</a>**</li-->
-
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Bill_Clinton">Bill Clinton</a> <span class="alanna">(Alanna: 2nd)</span></li-->
-
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li-->								
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/W._E._B._Du_Bois">W. E. B. Du Bois</a> </li-->
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Marjory_Stoneman_Douglas">Marjory Stoneman Douglas</a> </li-->
-				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Phan_%C4%90%C3%ACnh_Ph%C3%B9ng">Phan_%C4%90%C3%ACnh_Ph%C3%B9ng</a></li-->
-
-
-
-			</ol>
-
 			<h3>Literature</h3>
 			<ol>
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Pride_and_Prejudice">Pride and Prejudice</a></li>	
@@ -509,6 +487,26 @@ $(document).ready(function(){
 
 				<!--li><a href="http://demo-sites.citeit.net/fr.wikipedia.org/wiki/Les_Mis%C3%A9rables">Les Misérables</a> ** (French uses « » for quotation marks)</li-->
 				<!--li><a href="http://demo-sites.citeit.net/es.wikipedia.org/wiki/Don_Quijote_de_la_Mancha">Don Quixote</a>. <span class="alanna">(Alanna)</span> ** (Spanish uses « » for quotation marks) </li-->
+			</ol>
+
+
+			<h3>People/Groups</h3>
+			<ol>
+
+
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Ruth_Bader_Ginsburg">Ruth Bader Ginsburg</a> </li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Hillary_Clinton">Hillary Clinton</a></li>
+				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Donald_Trump">Donald Trump</a></li>
+
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Barack_Obama">Barak Obama</a>**</li-->
+				<!--li><a href="http://demo-sites.citeit.net/https://en.wikipedia.org/wiki/George_W._Bush">George W. Bush</a>**</li-->
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Bill_Clinton">Bill Clinton</a> <span class="alanna">(Alanna: 2nd)</span></li-->
+
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li-->								
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/W._E._B._Du_Bois">W. E. B. Du Bois</a> </li-->
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Marjory_Stoneman_Douglas">Marjory Stoneman Douglas</a> </li-->
+				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Phan_%C4%90%C3%ACnh_Ph%C3%B9ng">Phan_%C4%90%C3%ACnh_Ph%C3%B9ng</a></li-->
+
 			</ol>
 
 
@@ -599,11 +597,9 @@ $(document).ready(function(){
 				<li><a href="http://demo-sites.citeit.net/it.wikipedia.org/wiki/Leonardo_da_Vinci">Leonardo da Vinci</a> ** (Italian uses « » for quotation marks)</li>
 
 
-
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Hollywood_Women%27s_Political_Committee">Hollywood_Women's Political Committee</a> Will **</li>
 
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Irish_War_of_Independence">Irish War of Independence</a> <span class="alanna">(Alanna: 1st)</span></li>			
-
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/National_Gallery">National Gallery</a> (Will)**</li>	
 				<!--li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Mary,_mother_of_Jesus">Mary, mother of Jesus</a>**</li-->								
 				<li><a href="http://demo-sites.citeit.net/en.wikipedia.org/wiki/Bill_Clinton">Bill Clinton</a> <span class="alanna">(Alanna: 2nd)</span></li>
@@ -646,17 +642,19 @@ $(document).ready(function(){
 					https://en.wikipedia.org/wiki/Hoysala_Empire (short quotes)
 
 				Science
+					https://en.wikipedia.org/wiki/Velociraptor
 					https://en.wikipedia.org/wiki/Fauna_of_Scotland
+					https://en.wikipedia.org/wiki/Grasshopper
 					http	s://en.wikipedia.org/wiki/Phallus_indusiatus
 					https://en.wikipedia.org/wiki/Drosera_regia
-					https://en.wikipedia.org/wiki/Velociraptor
 					https://en.wikipedia.org/wiki/American_paddlefish
-					https://en.wikipedia.org/wiki/Grasshopper
-
-
 
 
 				People/Groups
+					https://en.wikipedia.org/wiki/Star_Wars
+					https://en.wikipedia.org/wiki/Stan_Lee
+					https://en.wikipedia.org/wiki/Jack_Kirby
+
 					https://en.wikipedia.org/wiki/Jomo_Kenyatta
 					https://en.wikipedia.org/wiki/Marjory_Stoneman_Douglas
 					https://en.wikipedia.org/wiki/Ohio_Wesleyan_University
@@ -674,8 +672,6 @@ $(document).ready(function(){
 
 
 				Places
-
-	
 					https://en.wikipedia.org/wiki/Nguy%E1%BB%85n_Ch%C3%A1nh_Thi
 					https://en.wikipedia.org/wiki/Pain_fitzJohn
 
